# app/Http/Resources/Expenses/ExpenseCollection.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Http\Resources\Expenses;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\ResourceCollection;
+
+class ExpenseCollection extends ResourceCollection
+{
+    public static $wrap = 'expenses';
+
+    /**
+     * Transform the resource collection into an array.
+     *
+     * @return array<int|string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return parent::toArray(request: $request);
+    }
+}
